# Velora

./: LICENSE  README.md
Velora/: CMakeLists.txt  build_velora_go.bat  hwo the laungauge shoud look part 2.txt  hwo the laungauge shoud look.txt  velora.toml
Velora 2.0/: LICENSE  READ ME!.txt  README.md  build.bat  build.sh  build_err3.txt  build_err3_utf8.txt  build_installer.bat
Velora 2.0/compiler/: analyzer.cpp  lexer.h  parser.cpp
Velora 2.0/examples/: full_game.vel  game_demo.vel  hello.vel
Velora 2.0/installer/: velora.manifest  velora_installer.cpp
Velora 2.0/stdlib/: vl_io.h  vl_time.h
Velora 2.0/tmp/: build_err.txt
Velora 2.0/velora_go/: go.mod  installer_windows.go  main.go  tray_windows.go
Velora 2.0/velora_go/compiler/: analyzer.go  codegen.go  lexer.go  parser.go
Velora 2.0/veloragame/: vg_physics.h  vg_ui.h
Velora/compiler/: analyzer.h  ast.h  codegen.cpp  codegen.h  lexer.cpp  main.cpp  parser.h  token.h
Velora/examples/: basics.vel  objects.vel  python_features.vel
Velora/installer/: compiler_bridge.cpp  velora_installer.rc
Velora/stdlib/: vl_fs.h  vl_log.h  vl_math.h
Velora/velora_go/: installer_windows.go  main.go
Velora/velora_go/compiler/: analyzer.go  interpreter.go  lexer.go  token.go
Velora/veloragame/: veloragame.c  veloragame.h  vg_all.h  vg_scene.h  vg_sound.h
